--- a/css/banner.css
+++ b/css/banner.css
@@ -68,7 +68,7 @@
     }
     .banner-content {
         margin: 0vw;   
-      background-color: rgba(255, 255, 255, 0.5); /* Fondo con opacidad para contraste */  
+     /* background-color: rgba(255, 255, 255, 0.5);  Fondo con opacidad para contraste */  
       max-width: 80vw; /* Limitar el ancho máximo */
       text-align: center; /* Alineación del texto a la izquierda */
       justify-content: center; /* Alineación vertical hacia la parte superior */
@@ -83,7 +83,7 @@
     }
     .banner-content {
         margin: 0vw;   
-      background-color: rgba(255, 255, 255, 0.5); /* Fondo con opacidad para contraste */  
+      /*background-color: rgba(255, 255, 255, 0.5); /* Fondo con opacidad para contraste */  
       max-width: 100vw; /* Limitar el ancho máximo */
       height: 100vh;
       text-align: center; /* Alineación del texto a la izquierda */
