--- a/css/testimonios.css
+++ b/css/testimonios.css
@@ -114,38 +114,103 @@ background-repeat: no-repeat;
 }
 
 /* Media tablets y móvil */
-@media screen and (max-width: 1024px) {
-  .content-container {
-    flex-direction: column; 
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .main-container {
+    background-image: url(../Assets/IMG/Teaser-mask-cafe.png);
+    background-image: url(../Assets/IMG/testimonios/carpeta1.png);
+    background-position: center; /* Centra la imagen de fondo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-size:  cover; /* Ajusta la imagen sin recortarla */
+
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
     align-items: center;
-  }
+    margin: 0vh 0;
+    gap: 1vw;
+    filter: drop-shadow(10px 10px 5px gray);
 
-  .left-section,
-  .right-section {
-    width: 100%;
-    max-width: none;
+    height: auto;
+    margin-bottom: 10VH;
+  }
+  .content-container {
+    position: absolute;
+    top: 60%;
+width: 90%;
+height: auto;
+    flex-direction: column-reverse;
     text-align: center;
+    padding: 0 5%;
+    gap: 0;
   }
+  .left-section{
+    flex-direction: row;
 
-  .testimonios-image {
-    width: 80%;
-    max-width: 250px;
+  }
+  
+  .right-section{
+    flex-direction: column;
+  }
+  .right-section h3{
+    width: 100%;
+  }
+  .testimonios-image{
+    width: 100%;
+    height: auto;
   }
 }
 
 @media screen and (max-width: 768px) {
   .main-container {
-    padding: 1.5rem;
-  }
+    background-image: url(../Assets/IMG/Teaser-mask-cafe.png);
+    background-image: url(../Assets/IMG/testimonios/carpeta1.png);
+    background-position: center; /* Centra la imagen de fondo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-size:  cover; /* Ajusta la imagen sin recortarla */
 
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    margin: 0vh 0;
+    gap: 1vw;
+    filter: drop-shadow(10px 10px 5px gray);
+
+    height: auto;
+    margin-bottom: 30VH;
+    gap: 2vh;
+  }
   .content-container {
-    gap: 1rem;
+    
+    position: absolute;
+    top: 80%;
+width: 80%;
+height: auto;
+    flex-direction: column-reverse;
+    text-align: center;
+    padding: 0 5%;
+    gap: 0;
   }
+  .left-section{
+    flex-direction: row;
 
-  .testimonios-image {
-    width: 100%;
-    max-width: 200px;
   }
+  
+  .right-section{
+    flex-direction: column;
+  }
+  .right-section h3{
+    width: 100%;
+  }
+ /* Estilo para la imagen */
+.testimonios-image {
+  width: 100%;  
+  height: auto;
+  object-fit: cover;
+}
+
+
+
 }
 
   
