--- a/css/testimonios.css
+++ b/css/testimonios.css
@@ -84,6 +84,11 @@ background-repeat: no-repeat;
   border-radius: 50%;
 }
 
+.circle:hover {
+  cursor: pointer;
+}
+
+
 .right-section {
   display: flex;
   flex-direction: column;
