--- a/CSS/carrusel.css
+++ b/CSS/carrusel.css
@@ -13,6 +13,7 @@
 }
 
 .carousel-item {
+    
     flex: 0 0 33.33%;  /* 3 ítems visibles a la vez */
     text-align: center;
     position: relative;
@@ -21,13 +22,18 @@
 }
 
 .carousel-item img {
+  
+        border: 5px solid rgb(104, 66, 20); /* Borde de 5px de grosor y color dorado */
+        border-image: linear-gradient(180deg, #293905, #011a0952) 1; 
+      
     width: 100%;
     height: auto;
-    display: block;
+    display: block;     
     border-radius: 8px; 
     transition: transform 0.3s ease;
-    filter: drop-shadow(5px 5px 0.5px rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(5px 5px 3px rgba(0, 0, 0, 0.5));
 }
+
 
 .carousel-item:hover img {
     transform: scale(1.05); 
