--- a/css/about.css
+++ b/css/about.css
@@ -40,7 +40,7 @@ h2 {
     /* Asegura que haya espacio entre el texto y la imagen */
     background-image: url(../Assets/IMG/ContextoInfoBG.png);
     border-radius: 2%;
-    filter: drop-shadow(10px 10px 5px gray);
+    filter: drop-shadow(var(--imagen-sombreado-left));
 }
 
 .Aboutleft-section p {
@@ -105,6 +105,7 @@ button:hover {
 .Aboutpopup-content img {
     display: block;
     object-fit: cover;
+    filter: drop-shadow(var(--imagen-sombreado-center));
 }
 
 .center-text {
@@ -357,7 +358,7 @@ button:hover {
 }
 
 .Aboutclose {
-    position: absolute;
+    position: static;
     top: 10px;
     right: 10px;
     font-size: 30px;
