--- a/CSS/histoy.CSS
+++ b/CSS/histoy.CSS
@@ -96,8 +96,7 @@
 
 .Aboutclose {
     position: static;
-    top: 10px;
-    right: 15px;
+    padding-bottom: 200px;
     cursor: pointer;
     font-size: 1.5rem;
     font-weight: bold;
