--- a/CSS/experiencias.css
+++ b/CSS/experiencias.css
@@ -75,6 +75,7 @@
     transform: scale(1.05);  /* Aumenta el tamaño ligeramente */
     opacity: 1;
     z-index: 5;
+    border-radius: 10px;
     
   cursor: pointer;
 }
