--- a/CSS/fotter.css
+++ b/CSS/fotter.css
@@ -5,6 +5,9 @@ footer {
   padding: 40px 20px;
   background-color: inherit;
   text-align: center;
+  background: linear-gradient(to bottom, rgba(97, 36, 3, 0) 0%, inherit 18%);
+
+  background-color: inherit;
 }
 
 /* Redes sociales */
